Fix progressbar position on mobile

--- a/src/app/components/ProgressBar.scss
+++ b/src/app/components/ProgressBar.scss
@@ -4,3 +4,9 @@
   height: 5px;
   border-radius: 0;
 }
+
+@media only screen and (max-width: 600px) {
+  #app .progress {
+    top: 56px;
+  }
+}
